MARVEL-4 letter filtering implementation

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -13,7 +13,10 @@
     {% block menu %}
         <div class="main-menu container">
             <div class="row">
-            <div class="hero-search col-md-6" style="margin-top: 50px;">
+                <div class="hero-search col-md-2" style="margin-top: 50px;">
+                    <a href="/">Home</a>
+                </div>
+                <div class="hero-search col-md-2" style="margin-top: 50px;">
                 <a href="/heroes">Hero search</a>
             </div>
             </div>
